tests/rosetta/out/Java/arithmetic-integer-1.error
javac: exit status 1
/tmp/ArithmeticInteger1.java:10: error: incompatible types: int cannot be converted to String
        System.out.println(String.valueOf(a) + " / " + String.valueOf(b) + " = " + String.valueOf(Integer.parseInt((a / b))));
                                                                                                                      ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
